# rinha-de-backend-2024-rust

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yml  executar-teste-local.ps1  init.sql  nginx.conf
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
src/: controller.rs  db.rs  error_handling.rs  main.rs  sql_db.rs  structs.rs
