[package]
name = "rinha-de-backend-2024-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
serde = {version = "1.0.196", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
