[package]
name = "rinha-de-backend-2024-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
chrono = {version = "0.4.34", features = ["serde"]}
hyper = "1.2.0"
hyper-util = {version = "0.1.3", features = ["tokio", "server-auto", "http1"] }
serde = {version = "1.0.196", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
tower = {version = "0.4.13", features = ["util"]}
alesia_client = {path = "./AlesiaDB_Client"}
